created nav section with responsiveness

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,51 @@
     margin: 0;
     padding: 0;
 }
+
+#nav{
+background-color: rgba(36, 183, 78, 0.289);
+}
+
+.nav-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.nav-container h2{
+    font-size: 2rem;
+    color: rgba(0, 76, 255, 0.634);
+}
+
+.nav-container ul{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+   
+
+}
+.nav-container li{
+    list-style: none;
+    font-size: 1.2rem;
+    
+}
+
+.nav-container a{
+    text-decoration: none;
+     /* color: #e5e5e5ce; */
+}
+
+
+
+
+
+
+@media screen and (max-width:576px){
+    .nav-container{
+        flex-direction: column;
+        gap: 20px;
+        padding-bottom: 10px;
+    }
+}
